# nifty

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/nifty/: __main__.py
src/nifty/cli/: commands.py  logger.py
src/nifty/nif/: __init__.py  body_part.py  io.py
tests/nif/: test_body_part.py
tests/resources/: cuirass_1.nif  ring.nif
typings/pyffi/formats/nif/: __init__.pyi
