[build-system]
requires = ["setuptools>61", "setuptools_scm>6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nifty"
description = "Tools to automate NIF file operations"
readme = "README.md"
version = "1.0"

requires-python = ">=3.14"
dependencies = [
    "pyffi",
    "rich>=14",
    "typer>=0.21",
]

[dependency-groups]
dev = [
    "prek>=0.2.25",
    "pytest>=9",
    "pytest-cov>=7",
]

[project.scripts]
nifty = "nifty.__main__:main"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.pyright]
include = ["src"]

pythonPlatform = "All"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q", "--import-mode=importlib", "--cov=src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["A", "ANN", "ASYNC", "B", "C4", "D", "DTZ", "E", "F", "FBT", "FLY", "G", "I", "ICN", "INP", "INT", "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PTH", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLOT", "T10", "T20", "TCH", "TD", "TID", "TRY", "UP", "W", "YTT"]
ignore = [
    "E203",
    # Missing docstrings
    "D1",
    # Docstring whitespace
    "D203", "D213", "D214", "D215",
    # Docstring quotes
    "D301",
    # Docstring content
    "D401", "D416",
    # Type annotations
    "ANN002", "ANN003", "ANN204", "ANN206",
    # Simplify
    "SIM102", "SIM108",
    # Todos
    "TD002", "TD003",
    # relative-imports
    "TID252",
    # Tryceratops
    "TRY003", "TRY400",
    # Perflint
    "PERF101",
    # Comprehensions
    "C408",
    # blanket-type-ignore
    "PGH003",
    # Pathlib
    "PTH123",
    # print()
    "T201",
    # Type checking block
    "TC002", "TC003",
    "S105", "S603", "S607",
    "PERF401"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["D", "ANN", "S101"]
"typings/*" = ["D", "ANN", "N802", "N818", "F403"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["typer.Typer.command"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[tool.uv]
compile-bytecode = true

[tool.uv.sources]
pyffi = { path = "../../../../../../Repositories/bethesda/pyffi" }
